main/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: timestamp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timestamp
  template:
    metadata:
      labels:
        app: timestamp
    spec:
      containers:
        - name: timestamp-writer
          image: jacker92/timestamp-writer:latest
        - name: timestamp-reader
          image: jacker92/timestamp-reader:latest
