main/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: timestamp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
